<resources>
    <string name="app_name">ACMIS</string>
    <string name="title_BottomTabbedActivity">BottomTabbedActivity</string>
    <string name="tab_1">Book flight</string>
    <string name="tab_2">Manage flight</string>
    <string name="choose_departure">Flying from?</string>
    <string name="choose_destination">Flying to?</string>
    <string name="fatalError">Fatal Error</string>
    <string name="warning">Warning!</string>
    <string name="no_flights_found">No Flight Found</string>
    <string name="search_results">Search Results</string>
    <string name="book_flight">Book Flight</string>
    <string name="search_flights">Search Flights</string>
    <string name="upcoming_flights">Upcoming Flights</string>
    <string name="airplane_logo">Airplane Logo</string>
    <string name="page_title">ACMIS</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="caption_select_destination">Choose Destination</string>
    <string name="caption_select_departure">Choose Departure</string>
    <string name="depart">Depart</string>
    <string name="passenger">passenger</string>
    <string name="passengers">passengers</string>
    <string name="round_trip">Round Trip?</string>
    <string name="return_flight">Return</string>
    <string name="continue_button">Continue</string>
    <string name="flights_available">Available Flights</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="no_bookings_found">No Booking Found</string>
    <string name="cancel_booking">Cancel booking</string>
</resources>
