<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_background"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_dark_onSurface"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:padding="14dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_city_depart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:textSize="22sp"
                    android:text="City depart" />
                <ImageView
                    android:id="@+id/card_direction_image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_round_arrow_forward_24"/>
                <TextView
                    android:id="@+id/card_city_arrive"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="22sp"
                    android:text="City dest" />

                <TextView
                    android:id="@+id/card_num_passengers"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/passenger"
                    android:textSize="22sp"
                    app:drawableRightCompat="@drawable/ic_round_person_24" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/md_theme_dark_shadow"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/card_view_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:layout_weight="0.7"
                android:choiceMode="singleChoice" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>