<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_dark_onSurface"
    android:id="@+id/search_results"
    android:transitionGroup="false"
    android:orientation="vertical"
    tools:context=".presentation.searchRoutes.SearchResults">

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="0.7">-->


    <androidx.core.widget.NestedScrollView
        android:id="@+id/search_results_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/header_layout_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/window_image"
                android:layout_width="match_parent"
                android:layout_height="410dp"
                android:layout_marginStart="-45dp"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="-45dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/window_image" />

            <LinearLayout
                android:id="@+id/search_results_title_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/search_results_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:text="Title"
                    android:textAppearance="?attr/textAppearanceHeadline3"
                    android:textColor="@color/design_default_color_background" />

                <TextView
                    android:id="@+id/search_results_location_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:text="Location title"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textColor="@color/design_default_color_background" />
            </LinearLayout>

            <TextView
                android:id="@+id/search_results_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/search_results_title_layout"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:text="@string/flights_available"
                android:textColor="@color/design_default_color_background"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/dotted_bottom_line"
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:layout_below="@id/search_results_text"
                android:layout_marginStart="200dp"
                android:visibility="gone"
                android:background="@drawable/bg_horizontal_dotted_line" />


            <TextView
                android:id="@+id/no_results_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/window_image"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/no_flights_found"
                android:textSize="40sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_search_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/search_results_text"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:choiceMode="singleChoice"
                android:focusable="false"
                android:layoutAnimation="@anim/layout_animation_from_bottom" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_results_top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="noScroll"
        app:navigationIcon="@drawable/ic_round_chevron_left_24"
        app:navigationIconTint="@color/design_default_color_background"
        app:subtitleCentered="true"
        app:subtitleTextAppearance="?attr/textAppearanceTitleLarge"
        app:subtitleTextColor="@color/design_default_color_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="14dp">

            <TextView
                android:id="@+id/search_depart_airport"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="0.3"
                android:gravity="end"
                android:text="City depart"
                android:textColor="@color/md_theme_dark_onSurface"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/search_direction_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="0"
                android:src="@drawable/ic_round_arrow_forward_24"
                app:tint="@color/md_theme_dark_onSurface" />


            <TextView
                android:id="@+id/search_arrive_airport"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="start"
                android:text="City dest"
                android:textColor="@color/md_theme_dark_onSurface"
                android:textSize="22sp" />

        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <Button
        android:id="@+id/book_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/book_flight"
        android:textSize="20sp"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/sort_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="end"
        android:textSize="18sp"
        app:iconGravity="end"
        app:iconSize="33sp"
        app:shapeAppearanceOverlay="@style/ACMIS.Button.Rounded"
        app:iconTint="@color/design_default_color_on_primary"
        app:icon="@drawable/ic_round_filter_list_24"
        android:textColor="@color/design_default_color_on_primary"
        android:backgroundTint="@color/md_theme_dark_shadow"
        android:text="@string/sort"/>

</RelativeLayout>